<resources>
    <string name="app_name">Inventory App</string>
    <string name="main_page_title">Главное</string>
    <string name="archive_title">Архив</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_message">Some message</string>
    <string name="photos_will_be_added">Photos will be added</string>
    <string name="str1">Наименование товара</string>
    <string name="str2">Впишите название товара</string>
    <string name="str3">Цена товара</string>
    <string name="str4">Впишите цену товара</string>
    <string name="str5">Производитель товара</string>
    <string name="str6">Название производителя товара</string>
    <string name="str7">Количество товара</string>
    <string name="str8">Добавить</string>
    <string name="str9">Отмена</string>
    <string name="_1">1</string>
    <string name="_1500_00">1500.00</string>
    <string name="str11">Сохранить</string>
    <string name="archive">Архивировать</string>
    <string name="geeksforgeeks">GeeksForGeeks</string>
    <string name="mainPage">Главное</string>
    <string name="addProduct">Добавить товар</string>
    <string name="archiveFragment">Архив</string>
    <string name="details">Детали о товаре</string>

    <string name="delete">Удалить</string>
    <string name="deleted">Удалено</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="reestablish">Востановить</string>
    <string name="reestablished">Востановлено</string>
    <string name="fillOutAllFields">Fill out all fields</string>
    <string name="fieldsAreField">Fields are field</string>
    <string name="updatedSuc">Update successfully</string>
    <string name="dollarSign">$</string>
    <string name="nike">Nike</string>
</resources>