<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/addProduct"
                    android:textColor="@color/toolbar"
                    android:textSize="@dimen/text_size_24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/back" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/width_150dp"
            android:layout_height="@dimen/height_100dp"
            android:layout_marginStart="@dimen/margin_105dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_105dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/radius_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/photos_will_be_added"
                android:src="@drawable/imagesquare" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/inputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_14dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/str1"
                android:textAlignment="viewStart"
                android:textColor="#A6A7A7"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:targetApi="28" />

            <EditText
                android:id="@+id/nameProduct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/str2"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_1"
                tools:targetApi="28" />


            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_14dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/str3"
                android:textAlignment="viewStart"
                android:textColor="#A6A7A7"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameProduct"
                tools:targetApi="28" />


            <EditText
                android:id="@+id/priceProduct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/str4"
                android:inputType="number"
                android:paddingStart="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_16sp"
                tools:targetApi="28" />


            <TextView
                android:id="@+id/tv_3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_14dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/str5"
                android:textAlignment="viewStart"
                android:textColor="#A6A7A7"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv2"
                tools:targetApi="28" />

            <EditText
                android:id="@+id/ownerProduct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/str6"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_16sp"
                tools:targetApi="28" />


            <TextView
                android:id="@+id/tv_4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_14dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/str7"
                android:textAlignment="viewStart"
                android:textColor="#A6A7A7"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv3"
                tools:targetApi="28" />


            <EditText
                android:id="@+id/amountProduct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/str7"
                android:inputType="number"
                android:paddingStart="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_16sp"
                tools:targetApi="28" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp"
            android:backgroundTint="@color/white"
            android:text="@string/str9"
            android:textAllCaps="false"
            android:textColor="#2A8CFF"
            app:layout_constraintEnd_toStartOf="@+id/addProductBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputContainer" />

        <Button
            android:id="@+id/addProductBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp"
            android:backgroundTint="#2A8CFF"
            android:text="@string/str8"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelBtn"
            app:layout_constraintTop_toBottomOf="@+id/inputContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>